src/parser/snapshots/bevy_state_plugin_generator__parser__tests__parse_node@Name.snap
---
source: src/parser/tests.rs
expression: parse_node(input)
---
Ok(("", Singleton(Identifier("Name"))))
